# serializer version: 1
# name: test_device_types[backgroundlight_ct]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 204,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 5000,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Ambilight',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      27.001,
      19.243,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      228,
      206,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.371,
      0.349,
    ),
  })
# ---
# name: test_device_types[backgroundlight_hs]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 204,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.HS: 'hs'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Ambilight',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      200,
      70,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      77,
      195,
      255,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.168,
      0.247,
    ),
  })
# ---
# name: test_device_types[backgroundlight_rgb]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 204,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Ambilight',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      120.0,
      100.0,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      0,
      255,
      0,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.172,
      0.747,
    ),
  })
# ---
# name: test_device_types[color_ct]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 4000,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      26.812,
      34.87,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      206,
      166,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.42,
      0.365,
    ),
  })
# ---
# name: test_device_types[color_ct][color_ct_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_ct][color_ct_nightlight_mode]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 59,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 1700,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      28.401,
      100.0,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': True,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      121,
      0,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.62,
      0.368,
    ),
  })
# ---
# name: test_device_types[color_hsv]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.HS: 'hs'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      100,
      35,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      195,
      255,
      166,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.31,
      0.45,
    ),
  })
# ---
# name: test_device_types[color_hsv][color_hsv_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_hsv_no_hue]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.HS: 'hs'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
  })
# ---
# name: test_device_types[color_hsv_no_hue][color_hsv_no_hue_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_rgb]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      0.0,
      100.0,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      0,
      0,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.701,
      0.299,
    ),
  })
# ---
# name: test_device_types[color_rgb][color_rgb_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_rgb_no_color]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
  })
# ---
# name: test_device_types[color_rgb_no_color][color_rgb_no_color_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[color_unsupported]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.UNKNOWN: 'unknown'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Strobe color',
      'Police',
      'Christmas',
      'RGB',
      'Random Loop',
      'Fast Random Loop',
      'LSD',
      'Slowdown',
      'Night Mode',
      'Date Night',
      'Movie',
      'Sunrise',
      'Sunset',
      'Romance',
      'Happy Birthday',
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
      <ColorMode.HS: 'hs'>,
      <ColorMode.RGB: 'rgb'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
  })
# ---
# name: test_device_types[color_unsupported][color_unsupported_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.ONOFF: 'onoff'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.ONOFF: 'onoff'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[default]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    'music_mode': False,
    'night_light': False,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
  })
# ---
# name: test_device_types[white]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Disco',
      'Strobe epilepsy!',
      'Alarm',
      'Police2',
      'WhatsApp',
      'Facebook',
      'Twitter',
      'Home',
      'Candle Flicker',
      'Tea Time',
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    'music_mode': False,
    'night_light': False,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
  })
# ---
# name: test_device_types[whitetemp]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 4000,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      26.812,
      34.87,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      206,
      166,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.42,
      0.365,
    ),
  })
# ---
# name: test_device_types[whitetemp][whitetemp_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 59,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[whitetemp][whitetemp_nightlight_mode]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 59,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 2700,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      28.395,
      65.723,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2700,
    'music_mode': False,
    'night_light': True,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      167,
      87,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.525,
      0.388,
    ),
  })
# ---
# name: test_device_types[whitetempmood]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 4000,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      26.812,
      34.87,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2700,
    'music_mode': False,
    'night_light': False,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      206,
      166,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.42,
      0.365,
    ),
  })
# ---
# name: test_device_types[whitetempmood][whitetempmood_nightlight_entity]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 59,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f Nightlight',
    'music_mode': False,
    'night_light': True,
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.BRIGHTNESS: 'brightness'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
  })
# ---
# name: test_device_types[whitetempmood][whitetempmood_nightlight_mode]
  ReadOnlyDict({
    <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 59,
    <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
    <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 2700,
    <LightEntityStateAttribute.EFFECT: 'effect'>: None,
    <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
      'Slow Temp',
      'Stop',
    ]),
    'flowing': False,
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Yeelight Color 0x15243f',
    <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
      28.395,
      65.723,
    ),
    <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
    <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2700,
    'music_mode': False,
    'night_light': True,
    <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
      255,
      167,
      87,
    ),
    <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
      <ColorMode.COLOR_TEMP: 'color_temp'>,
    ]),
    <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 44>,
    <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
      0.525,
      0.388,
    ),
  })
# ---
